--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 anyhow = "1.0.77"
 dotenv = "0.15.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
+serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.108"
+time = { version = "0.3.31", features = ["serde-well-known"] }
