--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.108"
 time = { version = "0.3.31", features = ["serde-well-known"] }
+tracing = { version = "0.1.40", default-features = false }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
