--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.77"
+clap = { version = "4.5.4", features = ["derive"] }
 dotenv = "0.15.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 serde = { version = "1.0.194", features = ["derive"] }
