--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ dotenv = "0.15.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.108"
-sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "time"], default-features = false }
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "macros"], default-features = false }
 time = { version = "0.3.31", features = ["serde-well-known"] }
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
 tracing = { version = "0.1.40", default-features = false }
