--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 anyhow = "1.0.77"
 clap = { version = "4.5.4", features = ["derive"] }
 dotenv = "0.15.0"
+git2 = "0.18.3"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 serde = { version = "1.0.194", features = ["derive"] }
 serde_json = "1.0.108"
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "tls-native-tls", "postgres", "time", "macros"], default-features = false }
+tempfile = "3.10.1"
 time = { version = "0.3.31", features = ["serde-well-known"] }
 tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
 tracing = { version = "0.1.40", default-features = false }
